--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
     "mongoose": "^5.0.7",
     "ramda": "^0.25.0",
