--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcn.models",
-  "version": "0.0.14",
+  "version": "0.0.39",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
+    "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.7",
     "ramda": "^0.25.0",
