--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "mongoose": "^5.0.7",
     "ramda": "^0.25.0",
     "require-directory": "^2.1.1"
+  },
+  "devDependencies": {
+    "jest": "^22.4.2"
   }
 }
